# polars-vec-ops

./: .gitignore  AUTORESEARCH.md  Cargo.toml  LICENSE  Makefile  README.md  compile_results.html  compile_results.tsv  implementation_plan.md  join_between_results.tsv  pyproject.toml  results.html  results.tsv  run.py  rustfmt.toml
.cargo/: config.toml
.github/workflows/: publish_to_pypi.yml
bench/: bench_compile.py  bench_histogram.py  bench_join_between.py  bench_psth.py  log_result.py  plot_compile_results.py  plot_progress.py  plot_results.py  results.html
polars_vec_ops/: __init__.py  expr.py  frame.py  join_between.py
src/: expressions.rs  lib.rs
src/expressions/: helpers.rs  histogram.rs  histogram_parallel.rs  list_clip.rs  list_convolve.rs  list_diff.rs  list_max.rs  list_mean.rs  list_min.rs  list_ops.rs  list_sum.rs  mod.rs
tests/: test_expr.py  test_join_between.py  test_pig_latinnify.py  test_vec_ops.py
vec_ops/: __init__.py
